--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -10,3 +10,8 @@ hba_file = './regress-pg_hba.conf'
 DateStyle = 'ISO, DMY'
 log_line_prefix='[%m] [%p] [%d] '
 fsync=off
+
+# Handy things to turn on when debugging
+#log_min_messages = debug2
+#log_error_verbosity = verbose
+#log_statement = 'all'
