--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ tmp_check/
 log/
 *.o
 *.pyc
-*.tar.bz2
+pglogical-output-*.tar.bz2
+pglogical-output-*.tar.bz2.md5
+pglogical-output-*.tar.bz2.asc
 pglogical_output.control
