--- a/pglogical.control.in
+++ b/pglogical.control.in
@@ -1,6 +1,6 @@
 # pglogical extension
 comment = 'PostgreSQL Logical Replication'
-default_version = '1.0'
+default_version = '__PGLOGICAL_VERSION__'
 module_pathname = '$libdir/pglogical'
 relocatable = false
 schema = pglogical
