--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -15,3 +15,7 @@ fsync=off
 #log_min_messages = debug2
 #log_error_verbosity = verbose
 #log_statement = 'all'
+
+# Indirection of dsns for testing
+pglogical.provider_dsn = 'regression'
+pglogical.subscriber_dsn = 'postgres'
