Turn sync commit on for regression tests
This paradoxically makes them run faster.

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -16,6 +16,8 @@ fsync=off
 #log_error_verbosity = verbose
 #log_statement = 'all'
 
+pglogical.synchronous_commit = true
+
 # Indirection of dsns for testing
 pglogical.provider_dsn = 'regression'
 pglogical.subscriber_dsn = 'postgres'
