Fix test parametrization

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -19,5 +19,5 @@ fsync=off
 pglogical.synchronous_commit = true
 
 # Indirection of dsns for testing
-pglogical.provider_dsn = 'regression'
-pglogical.subscriber_dsn = 'postgres'
+pglogical.provider_dsn = 'dbname=regression'
+pglogical.subscriber_dsn = 'dbname=postgres'
