Add node interface manipulation functions

--- a/regress-pg_hba.conf
+++ b/regress-pg_hba.conf
@@ -92,6 +92,11 @@ local   replication     super                                trust
 host    replication     super        127.0.0.1/32            trust
 host    replication     super        ::1/128                 trust
 
+local   replication     super2                                trust
+host    replication     super2        127.0.0.1/32            trust
+host    replication     super2        ::1/128                 trust
+
+
 local   replication     nonsuper                                trust
 host    replication     nonsuper        127.0.0.1/32            trust
 host    replication     nonsuper        ::1/128                 trust
