Correct submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "pglogical_output"]
 	path = pglogical_output
-	url = git@github.com:2ndQuadrant/pglogical_output.git
+	url = git@github.com:2ndQuadrant/pglogical.git
+	branch = pglogical_output
 [submodule "pglogical_dump"]
 	path = pglogical_dump
 	url = git@github.com:2ndQuadrant/pglogical_dump.git
