Add requires line for 9.4 control file

--- a/pglogical.control.in
+++ b/pglogical.control.in
@@ -3,4 +3,5 @@ comment = 'PostgreSQL Logical Replication'
 default_version = '__PGLOGICAL_VERSION__'
 module_pathname = '$libdir/pglogical'
 relocatable = false
+__REQUIRES__
 schema = pglogical
