Test for Issue #91
Reproduce the issue

--- a/t/perl-95-postgresql.conf
+++ b/t/perl-95-postgresql.conf
@@ -9,6 +9,7 @@ track_commit_timestamp = on
 DateStyle = 'ISO, DMY'
 log_line_prefix='[%m] [%p] [%d] '
 fsync=off
+log_statement = 'all'
 
 pglogical.synchronous_commit = true
 
