Add optional SPI interface for replication apply
Adds pglogical.use_spi boolean parameter that will turn on using SPI
with plain SQL instead of low-level API.

We don't do any plan caching yet.

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -23,3 +23,6 @@ pglogical.orig_provider_dsn = 'dbname=sourcedb'
 pglogical.provider_dsn = 'dbname=regression'
 pglogical.provider1_dsn = 'dbname=regression1'
 pglogical.subscriber_dsn = 'dbname=postgres'
+
+# Apply options
+pglogical.use_spi = true
