Test multiple upstreams
Testing Issue #53

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -20,4 +20,5 @@ pglogical.synchronous_commit = true
 
 # Indirection of dsns for testing
 pglogical.provider_dsn = 'dbname=regression'
+pglogical.provider1_dsn = 'dbname=regression1'
 pglogical.subscriber_dsn = 'dbname=postgres'
