Support for multi-insert
Add API for doing multi-inserts in the apply worker and implement said
API in the SPI apply code using piped COPY.

The COPY code was written by Pavan, rest by Petr.

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -24,5 +24,6 @@ pglogical.provider_dsn = 'dbname=regression'
 pglogical.provider1_dsn = 'dbname=regression1'
 pglogical.subscriber_dsn = 'dbname=postgres'
 
-# Apply options
-pglogical.use_spi = true
+# Uncomment to test SPI and multi-insert
+#pglogical.use_spi = true
+#pglogical.conflict_resolution = error
