Add test for node/origin cascading
Cascading here is between DBs through subscription
setup and not with table replication as such.

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -19,6 +19,7 @@ fsync=off
 pglogical.synchronous_commit = true
 
 # Indirection of dsns for testing
+pglogical.orig_provider_dsn = 'dbname=sourcedb'
 pglogical.provider_dsn = 'dbname=regression'
 pglogical.provider1_dsn = 'dbname=regression1'
 pglogical.subscriber_dsn = 'dbname=postgres'
