Fixes in queue replay/memory contexts

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -25,5 +25,5 @@ pglogical.provider1_dsn = 'dbname=regression1'
 pglogical.subscriber_dsn = 'dbname=postgres'
 
 # Uncomment to test SPI and multi-insert
-#pglogical.use_spi = true
-#pglogical.conflict_resolution = error
+pglogical.use_spi = true
+pglogical.conflict_resolution = error
