More PostgreSQL 10 compatibility

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -4,6 +4,7 @@ wal_level = logical
 max_wal_senders = 10
 max_replication_slots = 10
 track_commit_timestamp = on
+max_worker_processes = 10
 
 # Purely testing related:
 hba_file = './regress-pg_hba.conf'
