Increase GUC for passing tests (max worker)
Maybe the new tests added were enough to go over the limit ?

--- a/regress-postgresql.conf
+++ b/regress-postgresql.conf
@@ -1,8 +1,9 @@
 # Configuration that affects behaviour being tested:
 shared_preload_libraries = 'pglogical'
 wal_level = logical
-max_wal_senders = 10
-max_replication_slots = 10
+max_wal_senders = 20
+max_replication_slots = 20
+max_worker_processes = 20
 track_commit_timestamp = on
 
 # Purely testing related:
